Fixed bug due to which text wasn't wrapping to next line when its length exceeded the width of the container.

--- a/app/public/stylesheets/index.css
+++ b/app/public/stylesheets/index.css
@@ -104,6 +104,10 @@ html, body {
     margin-right: 5px;
 }
 
+#currently-selected-services, #currently-selected-vehicles {
+    word-break: break-all;
+}
+
 
 /* Tool page: Select services modal */
 
@@ -180,6 +184,10 @@ html, body {
 
 #select-vehicles-modal #vehicles-container .selected-vehicle {
     background-color: #dff0d8;
+}
+
+#selected-vehicles-modal-services {
+    word-break: break-all;
 }
 
 /* Tool page: Map */
